--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "browserify-zlib": "^0.2.0",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "mongoose": "^8.3.0",
+    "path-browserify": "^1.0.1",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -31,6 +33,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
