--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react-app": "^10.0.1",
     "bcrypt": "^5.1.1",
     "bfj": "^7.0.2",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "browserify-zlib": "^0.2.0",
     "browserslist": "^4.18.1",
@@ -44,6 +45,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "js-cookie": "^3.0.5",
     "mini-css-extract-plugin": "^2.4.5",
     "mongoose": "^8.3.0",
     "path-browserify": "^1.0.1",
@@ -55,6 +57,7 @@
     "prompts": "^2.4.2",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^2.10.2",
