--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest-watch-typeahead": "^1.0.0",
     "js-cookie": "^3.0.5",
     "mini-css-extract-plugin": "^2.4.5",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.0",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.4",
