--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.14",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@reduxjs/toolkit": "^2.2.5",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -72,7 +73,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.1.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
@@ -95,7 +96,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"    
+    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": [
